<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginBottom="57dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            android:paddingBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:hint="Title"
                android:maxLength="15"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_beat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_etBeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:hint="Beat Frequency"
                android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>



        <SeekBar
            android:id="@+id/seekBarBeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="16dp"
            android:progressTint="@color/colorPrimaryDark"
            android:thumbTint="@color/colorPrimaryDark" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_etBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:hint="Base Frequency"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <SeekBar
            android:id="@+id/seekBarBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="16dp"
            android:progressTint="@color/colorPrimaryDark"
            android:thumbTint="@color/colorPrimaryDark" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/open_sans"
                android:onClick="clickTest"
                android:text="Test"
                android:textAllCaps="false"
                android:textColor="@color/design_default_color_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/open_sans"
                android:onClick="clickStop"
                android:text="Stop"
                android:textAllCaps="false"
                android:textColor="@color/design_default_color_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/open_sans"
                android:onClick="clickSave"
                android:text="Save"
                android:textAllCaps="false"
                android:textColor="@color/design_default_color_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_test" />

            <TextView
                android:id="@+id/textView_waveType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="Wave type"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_headset_black_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/open_sans"
                android:text="Use headphones for a better experience"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation"
        app:labelVisibilityMode="labeled"
        android:background="?android:attr/windowBackground" />

    <!--    app:itemIconTint="@android:color/holo_red_dark"-->
<!--    app:itemTextColor="@android:color/holo_red_dark"-->


</RelativeLayout>