<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="Home" />

    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/ic_library"
        android:title="Library" />

    <item
        android:id="@+id/nav_create"
        android:icon="@drawable/ic_library_create"
        android:title="Create" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_more"
        android:title="More" />

</menu>