...
    <string name="Title_error_chars">Value must be 15 characters or less</string>
    <string name="Title_error_empty">Value cannot be empty</string>
    <string name="Beat_Error_values">Value between 1 and 40</string>
    <string name="Beat_Error_empty">Value cannot be empty</string>
    <string name="Base_Error_values">Value Between 21 and 1200</string>
    <string name="Base_Error_empty">Value cannot be empty</string>
    <string name="Toast_saved">Track saved.</string>
    <string name="Toast_error">Please fill fields correctly.</string>
    <string name="Username_empty">Username is required</string>
    <string name="Username_error">Username cannot be longer than 20 characters</string>
    <string name="Email_empty">Email is required</string>
    <string name="Email_error">Email cannot be longer than 30 characters</string>
    <string name="Email_error_invalid">Please enter a valid email</string>
    <string name="Password_empty">Password is required</string>
...
